--- a/package.json
+++ b/package.json
@@ -39,14 +39,13 @@
     "@apollo/client": "^3.3.6",
     "@apollo/react-hooks": "^4.0.0",
     "@fullhuman/postcss-purgecss": "^2.3.0",
-    "@tailwindcss/postcss7-compat": "^2.0.2",
     "@types/detect-node": "^2.0.0",
     "apollo-boost": "^0.4.9",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "apollo-link-context": "^1.0.20",
     "apollo-link-http": "^1.5.17",
-    "autoprefixer": "^9",
+    "autoprefixer": "^10.1.0",
     "cookie-parser": "^1.4.5",
     "dayjs": "^1.9.7",
     "detect-node": "^2.0.4",
@@ -58,7 +57,7 @@
     "isomorphic-unfetch": "^3.1.0",
     "js-cookie": "^2.2.1",
     "next": "^10.0.4",
-    "postcss": "^7",
+    "postcss": "^8.2.2",
     "postcss-nested": "^5.0.3",
     "prettier": "^2.2.1",
     "query-string": "^6.13.7",
@@ -67,7 +66,7 @@
     "react-dom": "^17.0.1",
     "react95": "^3.4.1",
     "styled-components": "^5.2.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "tailwindcss": "^2.0.2",
     "unstated-next": "^1.1.0",
     "utility-types": "^3.10.0"
   },
