--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@apollo/client": "^3.3.6",
     "@apollo/react-hooks": "^4.0.0",
     "@fullhuman/postcss-purgecss": "^2.3.0",
+    "@next/bundle-analyzer": "^10.0.5",
     "@types/detect-node": "^2.0.0",
     "apollo-boost": "^0.4.9",
     "apollo-cache-inmemory": "^1.6.6",
@@ -57,6 +58,7 @@
     "isomorphic-unfetch": "^3.1.0",
     "js-cookie": "^2.2.1",
     "next": "^10.0.4",
+    "next-compose-plugins": "^2.2.1",
     "postcss": "^8.2.2",
     "postcss-nested": "^5.0.3",
     "prettier": "^2.2.1",
