--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@fullhuman/postcss-purgecss": "^2.3.0",
     "@next/bundle-analyzer": "^10.0.5",
     "@types/detect-node": "^2.0.0",
+    "@types/react-image-gallery": "^1.0.1",
     "apollo-boost": "^0.4.9",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
@@ -66,6 +67,7 @@
     "react": "^17.0.1",
     "react-apollo": "^3.1.5",
     "react-dom": "^17.0.1",
+    "react-image-gallery": "^1.0.8",
     "react95": "^3.4.1",
     "styled-components": "^5.2.0",
     "tailwindcss": "^2.0.2",
